# wx-boot-rs

./: .env.example  Cargo.toml  README.md
.claude/skills/salvo-realtime/: SKILL.md
migrations/0001_init/: down.sql  up.sql
src/: data.rs  db.rs  email.rs  error.rs  macros.rs  main.rs  models.rs  redis.rs  routers.rs  schema.rs  shared.rs  things.rs  utils.rs
src/db/: pagination.rs  url_filter.rs
src/models/: base.rs  help_ticket.rs  interflow.rs  order.rs
src/routers/: account.rs  auth.rs  help_ticket.rs  home.rs  interflow.rs  label.rs  notification.rs  oauth.rs  order.rs  user.rs  user_last_login.rs
src/routers/account/: access_token.rs  avatar.rs  help_ticket.rs  notification.rs  order.rs  state.rs
src/routers/interflow/: stream.rs  thread.rs
src/routers/user/: avatar.rs  bucket.rs
src/things/: notification.rs  order.rs  user.rs  user_state.rs
src/things/user/: avatar.rs
src/utils/: fs.rs  media.rs  validator.rs
