[package]
name = "wx-boot-rs"
version = "0.1.0"
edition = "2021"
description = "A bootstrap template for WeChat mini-program backends built with Rust, Salvo, Diesel, and PostgreSQL"
license = "MIT"

[dependencies]
diesel = { version = "2.1.0", features = ["postgres", "r2d2", "serde_json", "chrono", "numeric", "64-column-tables"] }
diesel_migrations = "2.1.0"
dotenv = "0.15.0"
salvo = { version = "0.89.2", features = ["jwt-auth", "serve-static", "size-limiter", "cors"] }
futures = "0.3.30"
tokio = { version = "1.38.0", features = ["full"] }
once_cell = "1.15.0"
serde = { version = "1.0.118", features = ["derive"] }
serde_json = { version = "1.0.64" }
chrono = { version = "0.4.19", features = ["serde"] }
jsonwebtoken = "9"
bitflags = "1.3.2"
async-trait = "0.1.48"
thiserror = "1.0.26"
tracing = { version = "0.1.36", features = ["release_max_level_debug", "max_level_debug"] }
tracing-subscriber = { version = "0.3.15", features = ["env-filter", "json"] }
url = "2.3.1"
cookie = "0.16.0"
uuid = { version = "1.1.2", features = ["v4"] }
md5 = "0.7.0"
mime = "0.3.16"
mime_guess = "2.0.4"
handlebars = "4.3.4"
bigdecimal = { version = "0.4.5", features = ["serde"] }
regex = "1.6.0"
path-slash = "0.2.1"
textnonce = "1.0.0"
zip = "0.6.2"
bcrypt = "0.13.0"
rand = "0.8.3"
lettre = "0.10"
reqwest = { version = "0.11.18", features = ["gzip"] }
redis = "0.24.0"
serde_with = "3.0.0"
time = "0.3.36"
flexi_logger = "0.29.3"
log = "0.4"
lazy_static = "1.5.0"
wechat-pay-rust-sdk = {git = "https://github.com/FPG-Alan/wechat-pay-rust-sdk.git", rev = "beaaf6f"}
